<resources>
    <string name="app_name">Presensi AI</string>
    <string name="real_face">Real</string>
    <string name="fake_face">Fake</string>
    <string name="set_threshold_dialog_title">Threshold Configuration</string>
    <string name="set_threshold_dialog_text_hint">Threshold range 0–1, recommended threshold 0.915</string>
    <string name="set_threshold_dialog_confirm">OK</string>
    <string name="set_threshold_dialog_hint">Enter Threshold Value</string>

    <string name="author_name">Created By Yudas Malabi</string>

    <string name="header">Sistem Presensi Hummatech</string>
    <string name="sub_header">Powered By Machine Learning Model</string>

    <string name="menu_1">Presensi</string>
    <string name="menu_2">Daftar Pengguna</string>
    <string name="menu_3">Sinkronisasi</string>
    <string name="menu_4">Presensi Hari Ini</string>

    <string name="instructions_label">Silakan scan ID Card Anda!</string>
    <string name="instructions_hint">Tab Kartu anda untuk absen hari ini</string>

    <string name="cr_1">Copyright By Hummatech</string>
    <string name="cr_2">2024 Hummatech All Rights Reserved.</string>

    <string name="back_button">Kembali</string>

    <string name="sync_menu_1">Sinkronisasi\nPengguna</string>
    <string name="sync_menu_2">Sinkronisasi\nJadwal Presensi</string>
    <string name="sync_menu_3">Sinkronisasi\nPresensi</string>
    <string name="sync_menu_4">Sinkronisasi\nWajah Pengguna</string>

    <string name="title_activity_user_list">Activity User List</string>
</resources>
